[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beiwe-forest"
version = "1.0"
description = "Forest is a library for analyzing smartphone-based high-throughput digital phenotyping data"
authors = [
    {name = "Jukka-Pekka Onnela"},
    {name = "Josh Barback"},
    {name = "Zachary Clement"},
    {name = "Hassan Dawood"},
    {name = "Georgios Efstathiadis"},
    {name = "Patrick Emedom-Nnamdi"},
    {name = "Emily J. Huang"},
    {name = "Marta Karas"},
    {name = "Gang Liu"},
    {name = "Nellie Ponarul"},
    {name = "Marcin Straczkiewicz"},
    {name = "Ilya Sytchev"},
    {name = "Anna Beukenhorst"},
]
maintainers = [
    {name = "Onnela Lab", email = "onnela.lab@gmail.com"}
]
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
dependencies = [
    "holidays",
    "librosa",
    "numpy",
    "openrouteservice",
    "pandas",
    "pyproj",
    "python-dateutil",
    "pytz",
    "ratelimit",
    "requests",
    "scipy",
    "shapely",
    "ssqueezepy",
    "timezonefinder",
]
keywords = ["digital phenotyping", "smartphone", "statistics", "accelerometer", "GPS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Documentation = "https://forest.beiwe.org"
Homepage = "https://forest.beiwe.org"
Issues = "https://github.com/onnela-lab/forest/issues"
Source = "https://github.com/onnela-lab/forest"

[project.optional-dependencies]
dev = [
    "build",
    "cffconvert",
    "flake8",
    "flake8-pytest-style",
    "mypy",
    "pytest",
    "pytest-mock",
    "twine",
    "types-python-dateutil",
    "types-pytz",
    "types-requests",
    "types-setuptools",
]

[tool.setuptools.package-data]
"forest.poplar.raw" = ["noncode/*.csv", "noncode/*.json"]
